# navidrome-collector

./: .gitignore  flake.nix  nixos-module.nix  pyproject.toml
src/navidrome_collector/: cli.py  collector.py  notifier.py  organizer.py  queue.py  slskd_client.py  tagger.py  ytdlp_downloader.py
tests/: test_collector.py  test_organizer.py  test_queue.py  test_slskd_client.py  test_tagger.py  test_ytdlp.py
