[project]
name = "navidrome-collector"
version = "0.1.0"
description = "Soulseek-powered music collector for Navidrome"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47",
    "requests>=2.31",
    "pyacoustid>=1.3",
    "click>=8.1",
]

[project.scripts]
navidrome-collector = "navidrome_collector.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
